# 16nar-engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.py  scene_file.h
engine/: CMakeLists.txt  Makefile
engine/inc/: 16nardefs.h  game.h
engine/inc/abstract/: basic_slot.h  scene_reader.h  signal.h  signallable.h  transformable.h
engine/inc/constructor/: node_2d.h  sprite_node.h  world_node.h
engine/inc/render/: quadrant.h
engine/inc/system/: dynamic_lib.h  file_scene_reader.h  input_mapper.h
engine/include/: 16narconfig.h.in  16nardefs.h  game.h
engine/include/16nar/: 16nardefs.h  game.h
engine/include/16nar/abstract/: basic_slot.h  camera.h  drawable.h  drawable_2d.h  profile.h  render_device.h  render_system.h  scene_reader.h  signal.h  signallable.h  transformable.h  transformable_2d.h
engine/include/16nar/common/: 16nardefs.h  game.h
engine/include/16nar/constructor/: node_2d.h  scene_reader.h  sound_node.h  sprite_node.h  text_node.h  tilemap_node.h  world_node.h
engine/include/16nar/constructor2d/: drawable_node_2d.h  node_2d.h  sprite_node.h  transformable_2d.h  world_node.h
engine/include/16nar/logger/: base_log_writer.h  ilog_writer.h  logger.h  terminal_log_writer.h
engine/include/16nar/math/: math_functions.h  rectangle.h  rectangle.inl  transform_matrix.h  vec.h  vec.inl
engine/include/16nar/profiles/: profile.h  single_thread_profile.h
engine/include/16nar/render/: camera_2d.h  drawable.h  frame_render_device.h  irender_api.h  irender_device.h  irender_system.h  iresource_manager.h  ishader.h  ishader_program.h  qtree_render_system.h  quadrant.h  render_defs.h  render_system.h  view.h
engine/include/16nar/signals/: signal.h  signallable.h  signallable.inl  slot.h
engine/include/16nar/system/: dynamic_lib.h  dynamic_resource_manager.h  event_manager.h  exceptions.h  file_scene_reader.h  game_config.h  iprofile.h  iscene_reader.h  listener.h  monitor.h  package_manager.h  utils.h  window.h
engine/include/abstract/: basic_slot.h  drawable.h  scene_reader.h  signal.h  signallable.h  transformable.h
engine/include/constructor/: node_2d.h  sound_node.h  sprite_node.h  text_node.h  tilemap_node.h  world_node.h
engine/include/constructor/abstract/: drawable_node.h  node.h
engine/include/constructor/animations/: animation.h
engine/include/constructor/states/: scene_state.h
engine/include/constructor/tiles/: tile.h
engine/include/render/: quadrant.h
engine/include/signals/: slot.h
engine/include/system/: dynamic_lib.h  dynamic_resource_manager.h  event_manager.h  file_scene_reader.h  listener.h
engine/src/: game.cpp  main.cpp
engine/src/abstract/: drawable.cpp  signallable.cpp
engine/src/common/: game.cpp
engine/src/common/math/: math_functions.cpp  transform_matrix.cpp
engine/src/common/profiles/: single_thread_profile.cpp
engine/src/common/system/: dynamic_lib.cpp  event_manager.cpp  file_scene_reader.cpp  listener.cpp
engine/src/constructor/: node_2d.cpp  sound_node.cpp  sprite_node.cpp  text_node.cpp  tilemap_node.cpp  world_node.cpp
engine/src/constructor/abstract/: drawable_node.cpp  node.cpp
engine/src/constructor/animations/: animation.cpp
engine/src/constructor/profiles/: single_thread_profile.cpp
engine/src/constructor/render/: drawable.cpp  drawable_2d.cpp  qtree_render_system.cpp  quadrant.cpp
engine/src/constructor/states/: scene_state.cpp
engine/src/constructor/test/: opengl_st_render_api_test.cpp
engine/src/constructor/tiles/: tile.cpp
engine/src/constructor2d/: drawable_node_2d.cpp  node_2d.cpp  sound_node.cpp  sprite_node.cpp  tilemap_node.cpp  transformable_2d.cpp  world_node.cpp
engine/src/constructor2d/abstract/: node.cpp
engine/src/constructor2d/animations/: animation.cpp
engine/src/constructor2d/profiles/: single_thread_profile.cpp
engine/src/constructor2d/render/: drawable_2d.cpp  qtree_render_system.cpp  quadrant.cpp
engine/src/constructor2d/system/: scene.cpp  scene_state.cpp
engine/src/constructor2d/test/: opengl_st_render_api_test.cpp
engine/src/logger/: base_log_writer.cpp  logger.cpp  terminal_log_writer.cpp
engine/src/math/: math_functions.cpp  transform_matrix.cpp
engine/src/math/test/: math_functions_test.cpp  rectangle_test.cpp  transform_matrix_test.cpp  vec_test.cpp
engine/src/profiles/: single_thread_profile.cpp
engine/src/render/: camera_2d.cpp  drawable.cpp  frame_render_device.cpp  qtree_render_system.cpp  quadrant.cpp  view.cpp
engine/src/render/opengl/: cubemap_loader.cpp  frame_buffer_loader.cpp  framebuffer_loader.cpp  glad.c  mt_render_device.cpp  render_api.cpp  render_buffer_loader.cpp  render_device.cpp  shader.cpp  shader_loader.cpp  shader_program.cpp  st_render_device.cpp  (+3 more)
engine/src/signals/: signallable.cpp
engine/src/system/: dynamic_lib.cpp  event_manager.cpp  exceptions.cpp  file_scene_reader.cpp  game_config.cpp  input_mapper.cpp  listener.cpp  monitor.cpp  package_manager.cpp  window.cpp
engine/src/test/: opengl_st_render_api_test.cpp
example/: CMakeLists.txt
example/src/: example-level.json  example-package.json  example_level.cpp  main.cpp
scene-compiler/: CMakeLists.txt  compiler.cpp  compiler.h  main.cpp  scene-compiler.pro
scene-compiler/include/: base_data.h  compiler.h  scene_data.h
scene-compiler/src/: compiler.cpp  main.cpp
scene-compiler/translations/: scene-compiler_ru_RU.ts
schemas/: CMakeLists.txt  common.fbs  constructor2d_nodes.fbs  constructor2d_piece.fbs  constructor2d_scene.fbs  constructor_2d.fbs  package_common.fbs  resource.fbs
schemas/16nar/: scene_file.h
schemas/flatbuffers/: constructor2d_piece.fbs  constructor2d_scene.fbs  package.fbs
tools/: CMakeLists.txt  asset_tool.cpp  flatbuffers_asset_writer.cpp  flatbuffers_asset_writer.h  iasset_reader.h  iasset_writer.h  json_asset_reader.cpp  json_asset_reader.h  resource_package.h
tools/src/: asset_tool.cpp  binary_utils.cpp  flatbuffers_asset_reader.cpp  flatbuffers_asset_writer.cpp  json_asset_reader.cpp  json_asset_writer.cpp  utils.cpp
tools/src/test/: flatbuffers_resources_test.cpp  json_resources_test.cpp
(+137 files in other folders)
